<resources>
    <string name="app_name">imakan</string>
    <string name="imakan">IMAKAN</string>
    <string name="motto_imakan">Indonesia\nMaju\nMelalui\nPerikanan</string>
    <string name="lanjut">Lanjut</string>
    <string name="misi">MISI dari IMAKAN</string>
    <string name="misi_desc">IMAKAN memiliki misi untuk\nmendigitalisasi seluruh transaksi\nperikanan di penjuru negeri dengan\nmudah</string>
    <string name="tujuan_desc">IMAKAN akan membantu para penjual\nikan dan nelayan untuk mendigitalkan\ntoko dan produk mereka sehingga para\nmasyarakat dapat mengenal serta\nmelakukan transaksi</string>
    <string name="tujuan">Tujuan dari IMAKAN</string>
    <string name="welcome">Welcome to</string>
    <string name="login">Login</string>
    <string name="Username_Email">Username/Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">Masuk</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="jkt_2021_imakan">JKT © 2021 IMAKAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_seller">Best Seller Minggu Ini</string>
    <string name="show_more">Show More</string>
    <string name="rekomendasi">Rekomendasi Buat Kamu</string>
    <string name="beli_lagi">Beli Lagi Pesananmu</string>
    <string name="nama">Nama</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="tentang_produk">Tentang produk ini</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero quis tempus elementum nunc, urna fringilla. Dui volutpat ultricies risus diam nisl nisl, pellentesque habitasse. Commodo, phasellus nec erat eu, facilisi. Ac id amet dictum sed scelerisque curabitur.</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="dikirim_dari">dikirim dari</string>
    <string name="tentang_toko">Tentang toko</string>
    <string name="ulasan_dari_pembeli">Ulasan dari pembeli</string>
    <string name="masukkan_ke_keranjang">Masukkan ke keranjang</string>
    <string name="keranjang">Keranjang</string>
    <string name="beli">Beli</string>
    <string name="ringkasan_belanja">Ringkasan belanja</string>
    <string name="obrolan">Obrolan</string>
    <string name="profile">Profile</string>
    <string name="melacak_orderanmu">Melacak Orderanmu</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="produk_yang_ada_diwishlist">Produk yang ada di wishlist</string>
    <string name="riwayat_pembelian">Riwayat Pembelian</string>
    <string name="account_settings">Account settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_picture">Edit picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="alamat_rumah">Address</string>
    <string name="ganti_password">Change password? click here</string>
    <string name="hint_alamat">Enter your address here</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="konfirmasi_pembelian">Konfirmasi Pembelian</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="keranjang_kamu">Keranjang Kamu</string>
    <string name="pakai_promo">Pakai Promo</string>
    <string name="terapkan">Terapkan</string>
    <string name="masukkan_kode_promo">Masukkan kode promo</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="lanjut_berbelanja">Lanjut Berbelanja</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="bayar_diminimarket">Bayar di minimarket</string>
    <string name="bayar">Bayar</string>
    <string name="cara_pembayaran">Cara pembayaran:</string>
    <string name="desc_detail_payment">Pembayaran maksimal 1 x 24 jam. Jika lewat lebih dari 24 jam akan dibatalkan secara oitomatis</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="pembayaran_berhasil">Yay!\nPembayaran\nBerhasil</string>
    <string name="desc_payment_success">We will inform you via email later\nonce the transaction has been\naccepted</string>

</resources>